change link community chat to gitter instead of hipchat

--- a/templates/newsfeed.html
+++ b/templates/newsfeed.html
@@ -27,7 +27,7 @@
       </ul>
       <br />
      <strong class="translateit">Chat</strong><br /> <br/>
-      <p><span class="translateit">Join the cdnjs</span> <a href="http://www.hipchat.com/gBYzv0RIL" target="_blank" class="translateit">community chat</a></p>
+      <p><span class="translateit">Join the cdnjs</span> <a href="https://gitter.im/cdnjs/cdnjs" target="_blank" class="translateit">community chat</a></p>
     </div>
     <div class="col-md-9">
       <strong class="translateit">Latest updates</strong>
