--- a/templates/layout.html
+++ b/templates/layout.html
@@ -55,7 +55,7 @@
           <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
               <li class=""><a href="/news" class="translateit">Discussion</a></li>
-              <li class=""><a href="https://gitter.im/cdnjs/cdnjs" class="translateit">Chat (say hello!)</a></li>
+              <li class=""><a href="https://gitter.im/cdnjs/cdnjs" class="translateit">Chat</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
