--- a/templates/library.html
+++ b/templates/library.html
@@ -5,6 +5,7 @@
     <p><a href="{{library.homepage}}">{{library.homepage}}</a>
       <p class="translateit">{{library.description}}</p>
       <em class="translateit">{{library.keywords}}</em>
+      <a href="https://gratipay.com/{{library.gratipay}}/"><img src="http://img.shields.io/gratipay/{{library.gratipay}}.svg" /></a>
       <br />
       <br />
       <select class="form-control version-selector" style="float: right;">
