use https image on library.html

--- a/templates/library.html
+++ b/templates/library.html
@@ -6,7 +6,7 @@
       <p class="translateit">{{library.description}}</p>
       <em class="translateit">{{library.keywords}}</em>
       <br />
-      <a href="https://gratipay.com/{{library.gratipay}}/"><img src="http://img.shields.io/gratipay/{{library.gratipay}}.svg" /></a>
+      <a href="https://gratipay.com/{{library.gratipay}}/"><img src="https://img.shields.io/gratipay/{{library.gratipay}}.svg" /></a>
       <br />
       <br />
       <select class="form-control version-selector" style="float: right;">
