--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-md-12">
         <input id="search-box" placeholder="Search for a library" type="text" class="form-control col-md-7 search" aria-controls="example">
+        <div class="text-right text-muted">Realtime search by <img src="/img/algolia128x40.png" style="height: 20px" /></div>
     </div>
 </div>
 <div class="row">
