--- a/templates/library.html
+++ b/templates/library.html
@@ -8,7 +8,7 @@
       <br />
       <a href="https://gratipay.com/{{library.gratipay}}/"><img src="https://img.shields.io/gratipay/{{library.gratipay}}.svg" /></a>
       {{#library.namespace}}
-      <a href="http://libscore.com#{{library.namespace}}/"><img src="http://api.libscore.com/badge/{{library.namespace}}.svg" /></a>
+      <a href="http://libscore.com#{{library.namespace}}"><img src="http://107.170.240.125/badge/{{library.namespace}}.svg" /></a>
       {{/library.namespace}}
       <br />
       <br />
@@ -26,7 +26,6 @@
         </div>
 
         <div class="panel-body">
-
 
           <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
 
