--- a/templates/library.html
+++ b/templates/library.html
@@ -10,7 +10,7 @@
       <a href="https://gratipay.com/{{library.gratipay}}/"><img src="https://img.shields.io/gratipay/{{library.gratipay}}.svg" /></a>
       {{/library.gratipay}}
       {{#library.namespace}}
-      <a href="http://libscore.com#{{library.namespace}}"><img src="http://107.170.240.125/badge/{{library.namespace}}.svg" /></a>
+      <a href="http://libscore.com#{{library.namespace}}"><img src="http://api.libscore.com/badge/{{library.namespace}}.svg" /></a>
       {{/library.namespace}}
       <br />
       <br />
