--- a/templates/about.html
+++ b/templates/about.html
@@ -6,8 +6,8 @@
       <br /><span class="translateit">We host it all - JavaScript, CSS, SWF, images, etc!</span>
     </p>
     <p style="margin-top: 6px;">
-      <span class="translateit">Supports http/https/spdy, we encourage leaving the protocol&nbsp;</span><a href="http://paulirish.com/2010/the-protocol-relative-url/" class="translateit">off</a>!
-      <br /><span class="translateit">Currently used by ~308,000 websites worldwide(~430,000 in total), </span><a href="http://trends.builtwith.com/cdn/CDN-JS" class="translateit">see more</a>.
+      <span class="translateit">Supports http/https/spdy, we encourage always using <strong>https</strong>!
+      <br /><span class="translateit">Currently used by ~320,000 websites worldwide(~500,000 in total), </span><a href="http://trends.builtwith.com/cdn/CDN-JS" class="translateit">see more</a>.
     </p>
 
     <table class="table" style="margin-top: 15px; margin-bottom: 15px;">
