Fixed url column with to prevent the flicking effect when search results get displayed

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -119,3 +119,7 @@ p#date{
   font-style: normal;
   background: #ffdead;
 }
+
+.packages-table-container tbody tr td:last-child {
+  width: 60% !important;
+}
