Updated the style of matching tags

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -123,3 +123,12 @@ p#date{
 .packages-table-container tbody tr td:last-child {
   width: 60% !important;
 }
+
+.packages-table-container tbody tr .label-default.highlight {
+  background-color: #575552;
+}
+
+  .packages-table-container tbody tr .label-default.highlight em {
+    color: #ffdead;
+    background: none;
+  }
