add yaml parser, localize experiment

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,8 +36,8 @@
           </div>
           <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-              <li class=""><a href="http://github.com/cdnjs/cdnjs" class="translateit">Add a library</a></li>
-              <li class=""><a href="/about" class="translateit">About</a></li>
+              <li class=""><a href="http://github.com/cdnjs/cdnjs">{{add-a-library}}</a></li>
+              <li class=""><a href="/about">{{about}}</a></li>
 
             </ul>
           </div>
@@ -51,19 +51,19 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/news" class="translateit">community</a>
+            <a class="navbar-brand" href="/news">{{community}}</a>
           </div>
           <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-              <li class=""><a href="http://jobs.jsonresume.org/" class="translateit">Job Board</a></li>
-              <li class=""><a href="https://gitter.im/cdnjs/cdnjs" class="translateit">Chat</a></li>
+              <li class=""><a href="http://jobs.jsonresume.org/">{{job-board}}</a></li>
+              <li class=""><a href="https://gitter.im/cdnjs/cdnjs">{{chat}}</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a style="display: none;" class="login translateit" href="/login" >Login</a>
-              <li><a style="display: none;" class="logout translateit" href="/logout" >Logout</a>
-              <li><a style="display: none;" class="register translateit" href="/register" >Register</a>
-              <li><a style="display: none;" class="profile translateit" href="/profile" >Profile</a>
+              <li><a style="display: none;" class="login" href="/login" >{{login}}</a>
+              <li><a style="display: none;" class="logout" href="/logout" >{{logout}}</a>
+              <li><a style="display: none;" class="register" href="/register" >{{register}}</a>
+              <li><a style="display: none;" class="profile" href="/profile" >{{profile}}</a>
               </li>
             </ul>
           </div>
@@ -104,12 +104,12 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    
+
       ga('create', 'UA-44291190-1', 'auto');
       ga('require', 'linkid', 'linkid.js');
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
-    
+
     </script>
     <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
