--- a/templates/about.html
+++ b/templates/about.html
@@ -1,20 +1,20 @@
 <div class="row">
   <div class="col-md-7">
     <p>
-      <span class="translateit">Everyone loves the&nbsp;</span><a target="_blank" href="http://code.google.com/apis/libraries/devguide.html" class="translateit">Google CDN</a><span class="translateit">&nbsp;right? Even&nbsp;</span><a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank" class="translateit">Microsoft runs their own CDN</a>.
-      <br /><span class="translateit">The problem is, they only host the most popular libraries.</span>
-      <br /><span class="translateit">We host it all - JavaScript, CSS, SWF, images, etc!</span>
+      {{{about.google-and-microsoft}}}
+      <br />{{about.the-promblem}}
+      <br />{{about.we-host-it-all}}
     </p>
     <p style="margin-top: 6px;">
-      <span class="translateit">Supports http/https/spdy, we encourage always using <strong>https</strong>!
-      <br /><span class="translateit">Currently used by ~320,000 websites worldwide(~500,000 in total), </span><a href="http://trends.builtwith.com/cdn/CDN-JS" class="translateit">see more</a>.
+      {{{about.supports-http-https-spdy}}}
+      <br />{{{about.currently-used-by}}}
     </p>
 
     <table class="table" style="margin-top: 15px; margin-bottom: 15px;">
       <thead>
         <tr>
-          <td class="translateit">Creators</td>
-          <td class="translateit">Maintainers</td>
+          <td>{{about.creators}}</td>
+          <td>{{about.maintainers}}</td>
         </tr>
       </thead>
       <tbody>
@@ -68,35 +68,35 @@
         <li>Hover over rows and click on the +/- symbols to change your favorites(yellow)</li>
       </ul>
     </div>
-    <h3 class="translateit">Sponsors</h3>
+    <h3 class="translateit">{{about.sponsors}}</h3>
     <div class="sponsors">
 
 <a href="http://cloudflare.com">
   <img alt="cloudflare" style="margin-bottom: 20px;" src="/img/poweredbycloudflare.png" />
 </a>
 <br />
-      <p class="translateit">At CloudFlare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. CloudFlare is proud to provide the global CDN infrastructure that will help power that future.</p>
+      <p>{{about.cloudflare-description}}</p>
 
       <br />
 
 
-          <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp"></a><br /><span  class="translateit">Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</span></p>
+          <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp"></a><br />{{about.userapp-description}}</p>
 
       <br />
       <a href="https://www.algolia.com">
         <img alt="algolia" style="margin-bottom: 20px;" src="/img/algolia256x80.png" width="128" />
       </a>
-      <p class="translateit">Algolia provides a developer-friendly SaaS API for database search. It enables any website or mobile application to easily provide its end-users with an instant and relevant search. With Algolia's unique find as you type experience, users can find what they're looking for in just a few keystrokes.</p>
+      <p>{{about.algolia-description}}</p>
 
       <!--
                             <em><img src="http://d2i3bryf8wh7jo.cloudfront.net/bitcoin1.png" style="float: left; margin-right: 10px; width: 40px; height: 40px;" /> Earn <strong>$5 in Bitcoin</strong> for every pull request which <a href="https://github.com/cdnjs/cdnjs#enabling-npm-auto-update">converts a library to auto-update.</a></em>-->
 
     </div>
-    <h3 class="translateit">Media</h3>
+    <h3>{{about.media}}</h3>
 
     <iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/6-5hJblkLjo?rel=0" frameborder="0" allowfullscreen></iframe>
 
-    <h3 class="translateit">Translations</h3>
+    <h3>{{about.translations}}</h3>
       <ul>
       <li><a class="translateit" href="http://af.cdnjs.com">Afrikaans</a></li><li><a class="translateit" href="http://sq.cdnjs.com">Albanian</a></li><li><a class="translateit" href="http://ar.cdnjs.com">Arabic</a></li><li><a class="translateit" href="http://az.cdnjs.com">Azerbaijani</a></li><li><a class="translateit" href="http://eu.cdnjs.com">Basque</a></li><li><a class="translateit" href="http://bn.cdnjs.com">Bengali</a></li><li><a class="translateit" href="http://be.cdnjs.com">Belarusian</a></li><li><a class="translateit" href="http://bg.cdnjs.com">Bulgarian</a></li><li><a class="translateit" href="http://ca.cdnjs.com">Catalan</a></li><li><a class="translateit" href="http://zh-CN.cdnjs.com">Chinese Simplified</a></li><li><a class="translateit" href="http://zh-TW.cdnjs.com">Chinese Traditional</a></li><li><a class="translateit" href="http://hr.cdnjs.com">Croatian</a></li><li><a class="translateit" href="http://cs.cdnjs.com">Czech</a></li><li><a class="translateit" href="http://da.cdnjs.com">Danish</a></li><li><a class="translateit" href="http://nl.cdnjs.com">Dutch</a></li><li><a class="translateit" href="http://en.cdnjs.com">English</a></li><li><a class="translateit" href="http://eo.cdnjs.com">Esperanto</a></li><li><a class="translateit" href="http://et.cdnjs.com">Estonian</a></li><li><a class="translateit" href="http://tl.cdnjs.com">Filipino</a></li><li><a class="translateit" href="http://fi.cdnjs.com">Finnish</a></li><li><a class="translateit" href="http://fr.cdnjs.com">French</a></li><li><a class="translateit" href="http://gl.cdnjs.com">Galician</a></li><li><a class="translateit" href="http://ka.cdnjs.com">Georgian</a></li><li><a class="translateit" href="http://de.cdnjs.com">German</a></li><li><a class="translateit" href="http://el.cdnjs.com">Greek</a></li><li><a class="translateit" href="http://gu.cdnjs.com">Gujarati</a></li><li><a class="translateit" href="http://ht.cdnjs.com">Haitian Creole</a></li><li><a class="translateit" href="http://iw.cdnjs.com">Hebrew</a></li><li><a class="translateit" href="http://hi.cdnjs.com">Hindi</a></li><li><a class="translateit" href="http://hu.cdnjs.com">Hungarian</a></li><li><a class="translateit" href="http://is.cdnjs.com">Icelandic</a></li><li><a class="translateit" href="http://id.cdnjs.com">Indonesian</a></li><li><a class="translateit" href="http://ga.cdnjs.com">Irish</a></li><li><a class="translateit" href="http://it.cdnjs.com">Italian</a></li><li><a class="translateit" href="http://ja.cdnjs.com">Japanese</a></li><li><a class="translateit" href="http://kn.cdnjs.com">Kannada</a></li><li><a class="translateit" href="http://ko.cdnjs.com">Korean</a></li><li><a class="translateit" href="http://la.cdnjs.com">Latin</a></li><li><a class="translateit" href="http://lv.cdnjs.com">Latvian</a></li><li><a class="translateit" href="http://lt.cdnjs.com">Lithuanian</a></li><li><a class="translateit" href="http://mk.cdnjs.com">Macedonian</a></li><li><a class="translateit" href="http://ms.cdnjs.com">Malay</a></li><li><a class="translateit" href="http://mt.cdnjs.com">Maltese</a></li><li><a class="translateit" href="http://no.cdnjs.com">Norwegian</a></li><li><a class="translateit" href="http://fa.cdnjs.com">Persian</a></li><li><a class="translateit" href="http://pl.cdnjs.com">Polish</a></li><li><a class="translateit" href="http://pt.cdnjs.com">Portuguese</a></li><li><a class="translateit" href="http://ro.cdnjs.com">Romanian</a></li><li><a class="translateit" href="http://ru.cdnjs.com">Russian</a></li><li><a class="translateit" href="http://sr.cdnjs.com">Serbian</a></li><li><a class="translateit" href="http://sk.cdnjs.com">Slovak</a></li><li><a class="translateit" href="http://sl.cdnjs.com">Slovenian</a></li><li><a class="translateit" href="http://es.cdnjs.com">Spanish</a></li><li><a class="translateit" href="http://sw.cdnjs.com">Swahili</a></li><li><a class="translateit" href="http://sv.cdnjs.com">Swedish</a></li><li><a class="translateit" href="http://ta.cdnjs.com">Tamil</a></li><li><a class="translateit" href="http://te.cdnjs.com">Telugu</a></li><li><a class="translateit" href="http://th.cdnjs.com">Thai</a></li><li><a class="translateit" href="http://tr.cdnjs.com">Turkish</a></li><li><a class="translateit" href="http://uk.cdnjs.com">Ukrainian</a></li><li><a class="translateit" href="http://ur.cdnjs.com">Urdu</a></li><li><a class="translateit" href="http://vi.cdnjs.com">Vietnamese</a></li><li><a class="translateit" href="http://cy.cdnjs.com">Welsh</a></li><li><a class="translateit" href="http://yi.cdnjs.com">Yiddish</a></li>
     </ul>
@@ -105,23 +105,23 @@
   <div class="col-md-5">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <div class="panel-title" class="translateit">Explore</div>
+        <div class="panel-title">{{about.explore}}</div>
       </div>
       <div class="panel-body">
         <ul class="nav">
-          <li class=""><a href="http://github.com/cdnjs/cdnjs" class="translateit">Add a library</a>
+          <li class=""><a href="http://github.com/cdnjs/cdnjs">{{about.add-a-library}}</a>
           </li>
-          <li class=""><a href="https://github.com/cdnjs/cdnjs/issues?direction=desc&sort=created&state=open" class="translateit">Feedback</a>
+          <li class=""><a href="https://github.com/cdnjs/cdnjs/issues?direction=desc&sort=created&state=open">{{about.feedback}}</a>
           </li>
-          <li><a href="https://www.cloudflare.com/network-map" class="translateit">Our network</a>
+          <li><a href="https://www.cloudflare.com/network-map">{{about.our-network}}</a>
           </li>
-          <li><a href="http://stats.pingdom.com/htbkuegtgycv" class="translateit">Uptime</a>
+          <li><a href="http://stats.pingdom.com/htbkuegtgycv">{{about.uptime}}</a>
           </li>
-          <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources" class="translateit">Plugins</a>
+          <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources">{{about.plugins}}</a>
           </li>
-          <li><a href="http://www.hipchat.com/gBYzv0RIL" class="translateit">Chat</a>
+          <li><a href="http://www.hipchat.com/gBYzv0RIL">{{about.chat}}</a>
           </li>
-          <li><a href="/members" class="translateit">Members</a>
+          <li><a href="/members">{{about.members}}</a>
           </li>
 
         </ul>
