--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,11 +9,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{{title}}</title>
-  <meta property="og:title" content="{{title}}" />
+  <title>{{layout.title}}</title>
+  <meta property="og:title" content="{{layout.title}}" />
   <meta property="og:image" content="/img/logotext.png" />
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="{{description}}">
+  <meta name="description" content="{{layout.description}}">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/bootstrap.css">
@@ -36,8 +36,8 @@
           </div>
           <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-              <li class=""><a href="http://github.com/cdnjs/cdnjs">{{add-a-library}}</a></li>
-              <li class=""><a href="/about">{{about}}</a></li>
+              <li class=""><a href="http://github.com/cdnjs/cdnjs">{{layout.add-a-library}}</a></li>
+              <li class=""><a href="/about">{{layout.about}}</a></li>
 
             </ul>
           </div>
@@ -51,19 +51,19 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/news">{{community}}</a>
+            <a class="navbar-brand" href="/news">{{layout.community}}</a>
           </div>
           <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-              <li class=""><a href="http://jobs.jsonresume.org/">{{job-board}}</a></li>
-              <li class=""><a href="https://gitter.im/cdnjs/cdnjs">{{chat}}</a></li>
+              <li class=""><a href="http://jobs.jsonresume.org/">{{layout.job-board}}</a></li>
+              <li class=""><a href="https://gitter.im/cdnjs/cdnjs">{{layout.chat}}</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a style="display: none;" class="login" href="/login" >{{login}}</a>
-              <li><a style="display: none;" class="logout" href="/logout" >{{logout}}</a>
-              <li><a style="display: none;" class="register" href="/register" >{{register}}</a>
-              <li><a style="display: none;" class="profile" href="/profile" >{{profile}}</a>
+              <li><a style="display: none;" class="login" href="/login" >{{layout.login}}</a>
+              <li><a style="display: none;" class="logout" href="/logout" >{{layout.logout}}</a>
+              <li><a style="display: none;" class="register" href="/register" >{{layout.register}}</a>
+              <li><a style="display: none;" class="profile" href="/profile" >{{layout.profile}}</a>
               </li>
             </ul>
           </div>
