--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12">
-        <input id="search-box" placeholder="Search for a library" type="text" class="form-control col-md-7 search" aria-controls="example">
-        <div class="text-right text-muted">Realtime search by <a href="http://www.algolia.com/?utm_source=cdnjs&amp;utm_medium=link&amp;utm_campaign=cdnjs_search"><img src="/img/algolia128x40.png" style="height: 20px" /></a></div>
+        <input id="search-box" placeholder="{{home.search-for}}" type="text" class="form-control col-md-7 search" aria-controls="example">
+        <div class="text-right text-muted">{{home.realtime-search}} <a href="http://www.algolia.com/?utm_source=cdnjs&amp;utm_medium=link&amp;utm_campaign=cdnjs_search"><img src="/img/algolia128x40.png" style="height: 20px" /></a></div>
     </div>
 </div>
 <div class="row">
@@ -12,8 +12,8 @@
         <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
           <thead>
             <tr>
-              <th class="translateit">Library</th>
-              <th class="translateit">Link</th>
+              <th class="translateit">{{home.library}}</th>
+              <th class="translateit">{{home.link}}</th>
             </tr>
           </thead>
           <tbody>
