--- a/templates/newsfeed.html
+++ b/templates/newsfeed.html
@@ -1,6 +1,6 @@
   <div class="row">
     <div class="col-md-3" style="border-right: 1px solid #ccc;">
-      <strong class="translateit">Post an update</strong>
+      <strong>{{newsfeed.post-an-update}}</strong>
 
       <div style="clear: both;"></div>
       <hr />
@@ -14,23 +14,23 @@
         </form>
       </div>
       <div class="login-or-register"  style="display: none;">
-      <p><a href="/login" class="translateit">Login</a> <span class="translateit">or</span> <a href="/register" class="translateit">register</a><span class="translateit"> to post a status update</span></p>
+      <p>{{{newsfeed.login-or-register}}}</p>
       </div>
       <div style="clear: both;"></div>
       <hr />
-     <strong class="translateit">Rules</strong><br /> <br/>
+     <strong>{{newsfeed.rules}}</strong><br /> <br/>
       <ul style="margin: 0;padding:0;">
-        <li class="translateit">Feel free to promote your own projects, ask for feedback or say anything you feel like</li>
-        <li class="translateit">Keep your updates relevant to the web development industry</li>
-        <li class="translateit">You may only post <strong>one</strong> news item a day</li>
-        <li class="translateit">Limited to 200 characters, use url shorteners!</li>
+        <li>{{newsfeed.rule1}}</li>
+        <li>{{newsfeed.rule2}}</li>
+        <li>{{{newsfeed.rule3}}}</li>
+        <li>{{newsfeed.rule4}}</li>
       </ul>
       <br />
-     <strong class="translateit">Chat</strong><br /> <br/>
-      <p><span class="translateit">Join the cdnjs</span> <a href="https://gitter.im/cdnjs/cdnjs" target="_blank" class="translateit">community chat</a></p>
+     <strong>{{newsfeed.chat}}</strong><br /> <br/>
+      <p>{{newsfeed.join-the-cdnjs}} <a href="https://gitter.im/cdnjs/cdnjs" target="_blank">{{newsfeed.community-chat}}</a></p>
     </div>
     <div class="col-md-9">
-      <strong class="translateit">Latest updates</strong>
+      <strong>{{newsfeed.latest-updates}}</strong>
       <div style="clear: both;"></div>
       <hr />
       <ul style="margin: 0; padding: 0; list-style: none;">
@@ -40,7 +40,7 @@
             <div class="col-md-1"><img style="float: left; margin-right: 5px;  margin-bottom: 5px; width: 50px;" class="img-circle" src="{{gravatar}}" /></div>
             <div class="col-md-11">
             <p><a href="/profile/{{login}}"><strong>{{login}}</strong></a><br /><span class="translateit">{{{status}}}</span></p>
-            <div style="color: #ccc;" class="pull-right"><a data-disqus-identifier="{{_id}}" href="/news/{{_id}}/{{slug}}">Comments</a> | Posted <span  class="timeago" title="">{{timeago}}</span></div></div>
+            <div style="color: #ccc;" class="pull-right"><a data-disqus-identifier="{{_id}}" href="/news/{{_id}}/{{slug}}">{{newsfeed.comments}}</a> | {{newsfeed.posted}} <span class="timeago" title="">{{timeago}}</span></div></div>
             <div style="clear: both;"></div></div>
 
             <div style="clear: both;"></div>
