localize login button

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
         <input id="username" type="text" class="form-control" placeholder="{{login.username}}" required autofocus><br />
         <input id="password" type="password" class="form-control" placeholder="{{login.password}}" required><br />
       </div>
-      <input class="btn btn-lg btn-info btn-block" type="submit" value="Log in">
+      <input class="btn btn-lg btn-info btn-block" type="submit" value="{{login.button}}">
       <img id="loader" src="img/ajax-loader.gif" style="display: none; margin: 30px auto;">
     </form>
 
