--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,14 +4,14 @@
   <div class="col-md-12">
 <div class="panel panel-primary">
       <div class="panel-heading">
-        <div class="panel-title">Favorites</div>
+        <div class="panel-title">{{profile.favorites}}</div>
       </div>
       <div class="panel-body">
         <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
           <thead>
             <tr>
-              <th>Library</th>
-              <th>Link</th>
+              <th>{{profile.library}}</th>
+              <th>{{profile.link}}</th>
             </tr>
           </thead>
           <tbody>
