--- a/templates/members.html
+++ b/templates/members.html
@@ -1,5 +1,5 @@
-<h3>Members - beta</h3>
-<p><em>{{total_users}} community members and growing</em></p>
+<h3>{{members.title}}</h3>
+<p><em>{{total_users}} {{members.community-members-and-growing}}</em></p>
 <ul class="pagination">
   {{#page_nav}}
   <li class="{{classes}}"><a href="/members/{{page}}">{{page}} <span class="sr-only">(current)</span></a></li>
@@ -8,7 +8,7 @@
 <table class="table">
 
 <tbody>
-<thead><th style="width: 25px;"></th><th>User</th></thead>
+<thead><th style="width: 25px;"></th><th>{{members.User}}</th></thead>
 {{#users}}
 <tr>
   <td><img src="{{gravatar}}" /></td>
