Change hipchat to gitter in about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -119,7 +119,7 @@
           </li>
           <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources" class="translateit">Plugins</a>
           </li>
-          <li><a href="http://www.hipchat.com/gBYzv0RIL" class="translateit">Chat</a>
+          <li><a href="https://gitter.im/cdnjs/cdnjs" class="translateit">Chat</a>
           </li>
           <li><a href="/members" class="translateit">Members</a>
           </li>
