--- a/templates/about.html
+++ b/templates/about.html
@@ -115,7 +115,7 @@
           </li>
           <li><a href="https://www.cloudflare.com/network-map" class="translateit">Our network</a>
           </li>
-          <li><a href="http://stats.pingdom.com/htbkuegtgycv" class="translateit">Uptime</a>
+          <li><a href="http://stats.pingdom.com/4jg86a2wqei0" class="translateit">Uptime</a>
           </li>
           <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources" class="translateit">Plugins</a>
           </li>
