--- a/templates/layout.html
+++ b/templates/layout.html
@@ -69,12 +69,24 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-9 col-md-offset-2">
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <ins class="adsbygoogle"
+               style="display:inline-block;width:728px;height:90px"
+               data-ad-client="ca-pub-3429499544273869"
+               data-ad-slot="3036495038"></ins>
+          <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
+    </div>
 
 
 
 
     <div class="clear"></div>
-    <div class="page ">
+    <div class="page">
       {{{page}}}
     </div>
   </div>
