Changed to developer friendly carbon ads

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -70,15 +70,8 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-9 col-md-offset-2">
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-          <ins class="adsbygoogle"
-               style="display:inline-block;width:728px;height:90px"
-               data-ad-client="ca-pub-3429499544273869"
-               data-ad-slot="3036495038"></ins>
-          <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+      <div class="col-md-4 col-md-offset-4">
+        <script async type="text/javascript" src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=cdnjscom" id="_carbonads_js"></script>
       </div>
     </div>
 
