add OpenSearch support

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,7 @@
   <meta property="og:image" content="/img/logotext.png" />
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="{{description}}">
+  <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="cdnjs">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.1.1-1/css/united/bootstrap.min.css">
