--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-8">
         <div class="navbar navbar-default">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
@@ -40,20 +40,6 @@
               <li class=""><a href="/about" class="translateit">About</a></li>
 
             </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="navbar navbar-inverse">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/news" class="translateit">community</a>
-          </div>
-          <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
               <li class=""><a href="https://gitter.im/cdnjs/cdnjs" class="translateit">Chat</a></li>
 
@@ -67,12 +53,15 @@
             </ul>
           </div>
         </div>
+        <p>
+      <span class="translateit">Everyone loves the&nbsp;</span><a target="_blank" href="http://code.google.com/apis/libraries/devguide.html" class="translateit">Google CDN</a><span class="translateit">&nbsp;right? Even&nbsp;</span><a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank" class="translateit">Microsoft runs their own CDN</a>.
+      <br><span class="translateit">The problem is, they only host the most popular libraries.</span>
+      <br><span class="translateit">We host it all - JavaScript, CSS, SWF, images, etc!</span>
+    </p>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4 col-md-offset-4">
+      <div class="col-md-4">
         <script async type="text/javascript" src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=cdnjscom" id="_carbonads_js"></script>
-      </div>
+ 
     </div>
 
 
