--- a/templates/about.html
+++ b/templates/about.html
@@ -89,7 +89,7 @@
     </div>
     <h3 class="translateit">Media</h3>
 
-    <iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/6-5hJblkLjo?rel=0" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/6-5hJblkLjo?rel=0&hd=1&vq=hd720" frameborder="0" allowfullscreen></iframe>
 
     <!--
     <h3 class="translateit">Translations</h3>
