--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
   <div class="col-md-7">
     <p style="margin-top: 6px;">
       <span class="translateit">Supports http/https/spdy, we encourage always using <strong>https</strong>!
-      <br /><span class="translateit">Currently used by ~320,000 websites worldwide(~500,000 in total), </span><a href="http://trends.builtwith.com/cdn/CDN-JS" class="translateit">see more</a>.
+      <br /><span class="translateit">Currently used by ~520,000 websites worldwide, </span><a href="http://trends.builtwith.com/cdn/CDN-JS" class="translateit">see more</a>.
     </p>
 
     <table class="table" style="margin-top: 15px; margin-bottom: 15px;">
