catch up changes

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-7">
     <p style="margin-top: 6px;">
-      <span class="translateit">Supports http/https/spdy, we encourage always using <strong>https</strong>!
-      <br /><span class="translateit">Currently used by ~520,000 websites worldwide, </span><a href="http://trends.builtwith.com/cdn/CDN-JS" class="translateit">see more</a>.
+      {{{about.supports-http-https-spdy}}}
+      <br />{{{about.currently-used-by}}}
     </p>
 
     <table class="table" style="margin-top: 15px; margin-bottom: 15px;">
@@ -113,13 +113,9 @@
           <li><a href="https://www.cloudflare.com/network-map">{{about.our-network}}</a>
           </li>
           <li><a href="http://stats.pingdom.com/4jg86a2wqei0">{{about.uptime}}</a>
-          <li><a href="" class="translateit">Uptime</a>
-          </li>
           <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources">{{about.plugins}}</a>
           </li>
           <li><a href="https://gitter.im/cdnjs/cdnjs">{{about.chat}}</a>
-          <li><a href="" class="translateit">Chat</a>
-          </li>
           <li><a href="/members">{{about.members}}</a>
           </li>
 
