add some badges

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -67,6 +67,13 @@
       <span class="translateit">Everyone loves the&nbsp;</span><a target="_blank" href="http://code.google.com/apis/libraries/devguide.html" class="translateit">Google CDN</a><span class="translateit">&nbsp;right? Even&nbsp;</span><a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank" class="translateit">Microsoft runs their own CDN</a>.
       <br><span class="translateit">The problem is, they only host the most popular libraries.</span>
       <br><span class="translateit">We host it all - JavaScript, CSS, SWF, images, etc!</span>
+      <br>
+      <span class="translateit">
+        Join us now on GitHub!
+        <a href="https://github.com/cdnjs/cdnjs/stargazers"><img src="https://img.shields.io/github/stars/cdnjs/cdnjs.svg" /></a>
+        <a href="https://github.com/cdnjs/cdnjs/fork"><img src="https://img.shields.io/github/forks/cdnjs/cdnjs.svg" /></a>
+        <a href="https://github.com/cdnjs/cdnjs/issues"><img src="https://img.shields.io/github/issues-raw/cdnjs/cdnjs.svg" /></a>
+      </span>
     </p>
       </div>
       <div class="col-md-4">
