--- a/templates/about.html
+++ b/templates/about.html
@@ -16,13 +16,13 @@
         <tr>
           <td style="width:200px;">
             <a href="http://github.com/ryankirkman" style="margin-right: 10px;">
-              <img style="width: 50px;" src="/img/ryan.jpg" />
+              <img style="width: 50px; height: 50px;" src="/img/ryan.jpg" />
             </a>
             <a href="http://github.com/ryankirkman">Ryan Kirkman</a>
           </td>
           <td style="width: 200px;">
             <a href="http://petecooper.org" style="margin-right: 10px;">
-              <img style="width: 50px;" alt="" src="/img/pete.jpg" />
+              <img style="width: 50px; height: 50px;" alt="" src="/img/pete.jpg" />
             </a>
             <a href="http://petecooper.org">Pete Cooper</a>
           </td>
@@ -30,13 +30,13 @@
         <tr>
           <td style="width: 145px;">
             <a href="http://github.com/thomasdavis" style="margin-right: 10px;">
-              <img style="width: 50px;" alt="" src="/img/thomas.jpg" />
+              <img style="width: 50px; height: 50px;" alt="" src="/img/thomas.jpg" />
             </a>
             <a href="http://github.com/thomasdavis">Thomas Davis</a>
           </td>
           <td style="width: 200px;">
             <a href="http://decompile.it/blog/" style="margin-right: 10px;">
-              <img style="width: 50px;" alt="Drew Freyling" src="/img/drew.jpg" />
+              <img style="width: 50px; height: 50px;" alt="Drew Freyling" src="/img/drew.jpg" />
             </a>
             <a href="http://decompile.it/blog/">Drew Freyling</a>
           </td>
@@ -46,7 +46,7 @@
           </td>
           <td style="width: 200px;">
             <a href="https://github.com/PeterDaveHello" style="margin-right: 10px;">
-              <img style="width: 50px;" alt="Drew Freyling" src="/img/PeterDaveHello.png" />
+              <img style="width: 50px; height: 50px;" alt="Drew Freyling" src="/img/PeterDaveHello.png" />
             </a>
             <a href="https://github.com/PeterDaveHello">Peter Dave Hello</a>
           </td>
@@ -75,11 +75,11 @@
       <br />
 
 
-          <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp"></a><br /><span  class="translateit">Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</span></p>
+          <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp" width="200" height="63"></a><br /><span  class="translateit">Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</span></p>
 
       <br />
       <a href="https://www.algolia.com">
-        <img alt="algolia" style="margin-bottom: 20px;" src="/img/algolia256x80.png" width="128" />
+        <img alt="algolia" style="margin-bottom: 20px;" src="/img/algolia256x80.png" width="128" height="40"/>
       </a>
       <p class="translateit">Algolia provides a developer-friendly SaaS API for database search. It enables any website or mobile application to easily provide its end-users with an instant and relevant search. With Algolia's unique find as you type experience, users can find what they're looking for in just a few keystrokes.</p>
 
