fix img alt ...

--- a/templates/about.html
+++ b/templates/about.html
@@ -46,7 +46,7 @@
           </td>
           <td style="width: 200px;">
             <a href="https://github.com/PeterDaveHello" style="margin-right: 10px;">
-              <img style="width: 50px; height: 50px;" alt="Drew Freyling" src="/img/PeterDaveHello.png" />
+              <img style="width: 50px; height: 50px;" alt="Peter Dave Hello" src="/img/PeterDaveHello.png" />
             </a>
             <a href="https://github.com/PeterDaveHello">Peter Dave Hello</a>
           </td>
