--- a/templates/layout.html
+++ b/templates/layout.html
@@ -77,6 +77,17 @@
       <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://cdnjs.com" data-hashtags="cdnjs">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
       <!--twitter button-->
+      <!--facebook button-->
+      <div class="fb-like" data-href="https://cdnjs.com" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+      <div id="fb-root"></div>
+      <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+      <!--facebook button-->
     </p>
       </div>
       <div class="col-md-4">
