add pinterest button

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -88,6 +88,10 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));</script>
       <!--facebook button-->
+      <!--pinterest button-->
+      <a href="//www.pinterest.com/pin/create/button/" data-pin-do="buttonBookmark"  data-pin-color="red"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_red_20.png" /></a>
+      <script type="text/javascript" async defer src="//assets.pinterest.com/js/pinit.js"></script>
+      <!--pinterest button-->
     </p>
       </div>
       <div class="col-md-4">
