add google plus button

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -92,6 +92,16 @@
       <a href="//www.pinterest.com/pin/create/button/" data-pin-do="buttonBookmark"  data-pin-color="red"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_red_20.png" /></a>
       <script type="text/javascript" async defer src="//assets.pinterest.com/js/pinit.js"></script>
       <!--pinterest button-->
+      <!--google plus button-->
+      <div class="g-plusone" data-size="medium" data-annotation="inline" data-width="150" data-href="https://cdnjs.com"></div>
+      <script type="text/javascript">
+        (function() {
+          var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+          po.src = 'https://apis.google.com/js/platform.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+        })();
+      </script>
+      <!--google plus button-->
     </p>
       </div>
       <div class="col-md-4">
