--- a/templates/layout.html
+++ b/templates/layout.html
@@ -77,6 +77,11 @@
       <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://cdnjs.com" data-hashtags="cdnjs">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
       <!--twitter button-->
+      <!--pinterest button-->
+      &nbsp;
+      <a href="//www.pinterest.com/pin/create/button/" data-pin-do="buttonBookmark"  data-pin-color="red"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_red_20.png" /></a>
+      <script type="text/javascript" async defer src="//assets.pinterest.com/js/pinit.js"></script>
+      <!--pinterest button-->
       <!--facebook button-->
       <div class="fb-like" data-href="https://cdnjs.com" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
       <div id="fb-root"></div>
@@ -88,10 +93,6 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));</script>
       <!--facebook button-->
-      <!--pinterest button-->
-      <a href="//www.pinterest.com/pin/create/button/" data-pin-do="buttonBookmark"  data-pin-color="red"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_red_20.png" /></a>
-      <script type="text/javascript" async defer src="//assets.pinterest.com/js/pinit.js"></script>
-      <!--pinterest button-->
       <!--google plus button-->
       <div class="g-plusone" data-size="medium" data-annotation="inline" data-width="150" data-href="https://cdnjs.com"></div>
       <script type="text/javascript">
