--- a/templates/layout.html
+++ b/templates/layout.html
@@ -46,7 +46,7 @@
           </div>
           <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-              <li class=""><a href="http://github.com/cdnjs/cdnjs" class="translateit">Add a library</a></li>
+              <li class=""><a href="http://github.com/cdnjs/cdnjs" class="translateit">Add a lib</a></li>
               <li class=""><a href="/about" class="translateit">About</a></li>
 
             </ul>
@@ -54,6 +54,10 @@
               <li class=""><a href="https://gitter.im/cdnjs/cdnjs" class="translateit">Chat</a></li>
 
             </ul>
+            <ul class="nav navbar-nav"><li><a href="https://www.cloudflare.com/network-map">Network</a></li></ul>
+            <ul class="nav navbar-nav"><li><a href="http://stats.pingdom.com/4jg86a2wqei0">Uptime</a></li></ul>
+            <ul class="nav navbar-nav"><li><a href="https://github.com/cdnjs/cdnjs/issues">Issue</a></li></ul>
+            <ul class="nav navbar-nav"><li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources">Plugin</a></li></ul>
             <ul class="nav navbar-nav navbar-right">
               <!--
               <li><a style="display: none;" class="login translateit" href="/login" >Login</a>
