adj creator and maintainer display

--- a/templates/about.html
+++ b/templates/about.html
@@ -8,50 +8,51 @@
     <table class="table" style="margin-top: 15px; margin-bottom: 15px;">
       <thead>
         <tr>
-          <td class="translateit">Creators</td>
-          <td class="translateit">Maintainers</td>
+          <td class="translateit"><h3>Creators</h3></td>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td style="width:200px;">
-            <a href="http://github.com/ryankirkman" style="margin-right: 10px;">
+          <td style="width:300px;">
+            <a href="http://github.com/ryankirkman">
               <img style="width: 50px; height: 50px;" src="/img/ryan.jpg" />
+              Ryan Kirkman
             </a>
-            <a href="http://github.com/ryankirkman">Ryan Kirkman</a>
           </td>
-          <td style="width: 200px;">
-            <a href="http://petecooper.org" style="margin-right: 10px;">
-              <img style="width: 50px; height: 50px;" alt="" src="/img/pete.jpg" />
-            </a>
-            <a href="http://petecooper.org">Pete Cooper</a>
-          </td>
-        </tr>
-        <tr>
-          <td style="width: 145px;">
-            <a href="http://github.com/thomasdavis" style="margin-right: 10px;">
+          <td style="width: 300px;">
+            <a href="http://github.com/thomasdavis">
               <img style="width: 50px; height: 50px;" alt="" src="/img/thomas.jpg" />
+              Thomas Davis
             </a>
-            <a href="http://github.com/thomasdavis">Thomas Davis</a>
-          </td>
-          <td style="width: 200px;">
-            <a href="http://decompile.it/blog/" style="margin-right: 10px;">
-              <img style="width: 50px; height: 50px;" alt="Drew Freyling" src="/img/drew.jpg" />
-            </a>
-            <a href="http://decompile.it/blog/">Drew Freyling</a>
           </td>
         </tr>
+      </tbody>
+      <thead>
         <tr>
-          <td style="width: 200px;">
-          </td>
-          <td style="width: 200px;">
-            <a href="https://github.com/PeterDaveHello" style="margin-right: 10px;">
+          <td class="translateit"><h3>Maintainers</h3></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td style="width: 300px;">
+            <a href="https://github.com/PeterDaveHello">
               <img style="width: 50px; height: 50px;" alt="Peter Dave Hello" src="/img/PeterDaveHello.png" />
+              Peter Dave Hello
             </a>
-            <a href="https://github.com/PeterDaveHello">Peter Dave Hello</a>
+          </td>
+          <td style="width: 300px;">
+            <a href="http://decompile.it/blog/">
+              <img style="width: 50px; height: 50px;" alt="Drew Freyling" src="/img/drew.jpg" />
+              Drew Freyling
+            </a>
+          </td>
+          <td style="width: 300px;">
+            <a href="http://petecooper.org">
+              <img style="width: 50px; height: 50px;" alt="Pete Cooper" src="/img/pete.jpg" />
+              Pete Cooper
+            </a>
           </td>
         </tr>
-
       </tbody>
     </table>
     <div class="logged-in" style="display: none;">
