remove row class

--- a/templates/library.html
+++ b/templates/library.html
@@ -1,4 +1,4 @@
-<div class="row library-container">
+<div class="library-container">
   <div class="col-md-12">
     <h1 style="margin-top: 00px;">{{library.name}}</h1>
 
