--- a/templates/newsfeed.html
+++ b/templates/newsfeed.html
@@ -1,4 +1,4 @@
-  <div class="row">
+  <div>
     <div class="col-md-3" style="border-right: 1px solid #ccc;">
       <strong class="translateit">Post an update</strong>
 
