--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div>
   <div class="col-md-7">
     <p style="margin-top: 6px;">
       <span class="translateit">Supports http/https/spdy, we encourage always using <strong>https</strong>!
