--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,10 @@
-<div class="row">
+<div>
     <div class="col-md-12">
         <input id="search-box" placeholder="Search for a library" type="text" class="form-control col-md-7 search" aria-controls="example">
         <div class="text-right text-muted">Realtime search by <a href="http://www.algolia.com/?utm_source=cdnjs&amp;utm_medium=link&amp;utm_campaign=cdnjs_search"><img src="/img/algolia64x20.png" style="height: 20px; width:64px" /></a></div>
     </div>
 </div>
-<div class="row">
+<div>
   <div class="col-md-12">
     <div class="">
       <div class="packages-table-container">
