--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
   </div>
   <div class="container">
 
-    <div class="row">
+    <div>
       <div class="col-md-8">
         <div class="navbar navbar-default">
           <div class="navbar-header">
