--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
 <img style="float: left;margin-right: 10px;" class="avatar-frame" src="{{gravatar}}" />
 <h2 style="float: left;margin-left: 10px; line-height: 50px;">{{login}}</h2>
-<div class="row">
+<div>
   <div class="col-md-12">
 <div class="panel panel-primary">
       <div class="panel-heading">
