add twitter follow button on about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -18,12 +18,14 @@
               <img style="width: 50px; height: 50px;" src="/img/ryan.jpg" />
               Ryan Kirkman
             </a>
+            <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/ryan_kirkman" data-show-count="false" data-lang="en">Follow @ryan_kirkman</a>
           </td>
           <td style="width: 300px;">
             <a href="http://github.com/thomasdavis">
               <img style="width: 50px; height: 50px;" alt="" src="/img/thomas.jpg" />
               Thomas Davis
             </a>
+            <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/neutralthoughts" data-show-count="false" data-lang="en">Follow @neutralthoughts</a>
           </td>
         </tr>
       </tbody>
@@ -39,22 +41,26 @@
               <img style="width: 50px; height: 50px;" alt="Peter Dave Hello" src="/img/PeterDaveHello.png" />
               Peter Dave Hello
             </a>
+            <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/peterdavehello" data-show-count="false" data-lang="en">Follow @peterdavehello</a>
           </td>
           <td style="width: 300px;">
             <a href="http://decompile.it/blog/">
               <img style="width: 50px; height: 50px;" alt="Drew Freyling" src="/img/drew.jpg" />
               Drew Freyling
             </a>
+            <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/drewfreyling" data-show-count="false" data-lang="en">Follow @drewfreyling</a>
           </td>
           <td style="width: 300px;">
             <a href="http://petecooper.org">
               <img style="width: 50px; height: 50px;" alt="Pete Cooper" src="/img/pete.jpg" />
               Pete Cooper
             </a>
+            <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/petecooper" data-show-count="false" data-lang="en">Follow @petecooper</a>
           </td>
         </tr>
       </tbody>
     </table>
+    <script>window.twttr=(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],t=window.twttr||{};if(d.getElementById(id))return t;js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);t._e=[];t.ready=function(f){t._e.push(f);};return t;}(document,"script","twitter-wjs"));</script>
     <div class="logged-in" style="display: none;">
       <p>
         <img id="gravatar" src="" style="float: left; width: 64px; height: 64px; border: 1px solid #ccc; margin-right: 10px;" />Hey
