adj community share buttons

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -73,36 +73,45 @@
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=watch&count=true&v=2" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=star&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=fork&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
-      <!--twitter button-->
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://cdnjs.com" data-hashtags="cdnjs">Tweet</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-      <!--twitter button-->
-      <!--pinterest button-->
-      &nbsp;
-      <a href="//www.pinterest.com/pin/create/button/" data-pin-do="buttonBookmark"  data-pin-color="red"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_red_20.png" /></a>
-      <script type="text/javascript" async defer src="//assets.pinterest.com/js/pinit.js"></script>
-      <!--pinterest button-->
-      <!--facebook button-->
-      <div class="fb-like" data-href="https://cdnjs.com" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
-      <div id="fb-root"></div>
-      <script>(function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>
-      <!--facebook button-->
-      <!--google plus button-->
-      <div class="g-plusone" data-size="medium" data-annotation="inline" data-width="150" data-href="https://cdnjs.com"></div>
-      <script type="text/javascript">
-        (function() {
-          var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-          po.src = 'https://apis.google.com/js/platform.js';
-          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-        })();
-      </script>
-      <!--google plus button-->
+      <div style="font-size:0px">
+        <!--twitter button-->
+        <div style="display:inline-block;">
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://cdnjs.com" data-hashtags="cdnjs">Tweet</a>
+        </div>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        <!--twitter button-->
+        <!--pinterest button-->
+        <div style="display: inline-block; margin-left: 5px;">
+          <a href="//www.pinterest.com/pin/create/button/" data-pin-do="buttonBookmark"  data-pin-color="red"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_red_20.png" /></a>
+        </div>
+        <script type="text/javascript" async defer src="//assets.pinterest.com/js/pinit.js"></script>
+        <!--pinterest button-->
+        <!--google plus button-->
+        <div style="display:inline-block; margin-left: 5px;">
+          <div class="g-plusone" data-size="medium" data-annotation="none" data-href="https://cdnjs.com"></div>
+        </div>
+        <script type="text/javascript">
+          (function() {
+            var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+            po.src = 'https://apis.google.com/js/platform.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+          })();
+        </script>
+        <!--google plus button-->
+        <!--facebook button-->
+        <div style="display:inline-block; margin-left: 5px;">
+          <div class="fb-like" data-href="https://cdnjs.com" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+        </div>
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+        <!--facebook button-->
+      </div>
     </p>
       </div>
       <div class="col-md-4">
